# inetbfa-data-conversion

./: .gitattributes  .gitignore  .travis.yml  README.md  README.rst  Readme.md  UpgradeLog.htm  Vagrantfile  build.py  convert.sh  datamanager.pyproj  dodo.py  init.sh  initialise.sh  intersect.sln  pip_requirements.txt  requirements.txt  run.sh  scratchpad.py  setup.cfg  setup.py
analysis/: analysis_playground.py
console/: build.py  console.pyproj  menu.py
core/: build.py  core.pyproj
datamanager/: MANIFEST.in  __init__.py  adjust.py  datamanager.pyproj  datamodel.py  dodo.py  envs.py  liquidity_metrics.py  load.py  main.py  process_downloads.py  referencedata.py  reporting.py  run.py  setup.cfg  setup.py  tasks.py  transforms.py  utils.py
datamanager/datamanager/: __init__.py  _version.py  adjust.py  datamodel.py  envs.py  load.py  main.py  process_downloads.py  run.py  tasks.py
datamanager/datamanager/process/: FileIO.py  index_preprocessing.py  transform_data.py  update_reference.py
datamanager/datamanager/utils/: __init__.py  utils.py
datamanager/process/: FileIO.py  data_preprocessing.py  dividend_preprocessing.py  extract.py  extract_index_reference.py  extract_ratio_lineitems.py  index_preprocessing.py  market_preprocessing.py  preprocessing.py  ratios_preprocessing.py  update_reference.py
datamanager/src/main/python/datamanager/: adjust.py  envs.py  load.py  process_downloads.py  run.py  sync.py
datamanager/src/unittest/python/: test.py
datamanager/test/: datamanager.py
datamanager/utils/: utils.py
quantstrategies/: build.py  dodo.py  (+6 more)
(+183 files in other folders)
