
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[metadata]
name = datamanager
author = Intersetc Technologies CC
author-email = niel.swart@outlook.com
summary = Loads and transforms data
description-file = Readme.md

[versioneer]
VCS = git
style = pep440
versionfile_source = datamanager/_version.py
versionfile_build = datamanager/_version.py
tag_prefix = ''
parentdir_prefix = datamanager-
